syntax = "proto3";

package protobuf.character;

import "core/name.proto";

message PlayerId {
  string id = 1;
}

message Player {
  PlayerId id = 4;
  string name = 1;
  core.Name race = 2;
  core.Name cls = 3;
}
